--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     height: 100vh;
     width:100vw;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
 }
 
 #mobile{
@@ -26,7 +26,11 @@ body{
     padding: 3%;
     max-width: 360px;
     position: fixed;
-    z-index: 3;
+    z-index: 2;
+}
+
+.slider{
+    visibility: hidden;
 }
 
 .sorry{
@@ -58,6 +62,7 @@ h4{
     position: absolute;
     left:0;right:0;top:12%;bottom:0;
     margin:0 auto;
+    z-index: 10;
 }
 
 img{
@@ -84,7 +89,6 @@ img{
 
 .card_groups, .card_group,.big_card,.little_card{
     aspect-ratio: 5 / 7;
-
 }
 
 .card_change > .compact_view{
@@ -167,6 +171,7 @@ img{
     transition: transform 800ms cubic-bezier(.05,.43,.25,.95);
     background-position: center;
     background-size: cover;
+    z-index: 10;
 }
 
 .big_card{
@@ -237,6 +242,7 @@ img{
 
 /*button choose picture*/
 .card_change{
+    visibility: visible;
     margin-top: 8vmin;
     display: flex;
     justify-content: space-evenly;
@@ -268,4 +274,33 @@ img{
 /*computer first*/
 @media (max-width:400px) {
  
+    ::-webkit-scrollbar {
+        width: 0;
+      }
+
+    .slider{
+        visibility: visible;
+        position: absolute;
+        left:0;right:0;top:auto;bottom:0;
+        margin:0 auto;
+        padding: 3%;
+        width: 30vmin;
+        height: 20vmin;
+        display: flex;
+        align-content: space-around;
+        overflow-x: scroll;
+        scroll-snap-align: center;
+        z-index: 2;
+    }
+    
+    .card{
+        display: grid;
+        place-items: center;
+        min-width: 30vmin;
+        background-color:antiquewhite;
+    }
+
+    .card_change{
+        visibility: hidden;
+    }
 }
