--- a/style.css
+++ b/style.css
@@ -51,11 +51,13 @@ h4{
     align-items: center;
     z-index: 1;
     padding: 6.5vh;
+    width: 30vmin;
+    height: 60vmin;
     max-width: 1080px;
     background-color: antiquewhite;
     border-radius: 2vmin;
     box-shadow: 0vmin 0vmin 5vmin rgba(0, 0, 0, 0.4);
-    transition: width 1s .7s ease-out;
+    transition: all 1s .7s ease-out;
 }
 
 .card_group{
@@ -105,6 +107,14 @@ img{
     transition: transform 200ms;
     }
 
+.card_change{
+    transition: transform 1s .7s ease-out;
+}
+
+.card_swiper[data-view="1"] > .card_change{
+    transform: translateY(340%);
+}
+
 .card_swiper[data-view="1"] .card_group[data-status="active"]{
     transition-delay: 300ms;
     transform: translateX(0%) scale(0);
@@ -116,10 +126,14 @@ img{
     }
 
 .card_swiper[data-view="1"]{
-    width: 70vw;
+    width: 110vmin;
+    height: 80vmin;
     }
 
 /*compress view*/
+.card_swiper[data-view="0"] > .card_change{
+    transform: translateY(0%);
+}
 
 .card_swiper[data-view="0"] .compact_view{
     transition-delay: 1s;
@@ -127,7 +141,8 @@ img{
     }
 
 .card_swiper[data-view="0"]{
-    width:30Vmin;
+    width: 30vmin;
+    height: 60vmin;
 }
 
 
@@ -166,6 +181,7 @@ img{
   }  
 
 /*card activity*/
+
  .big_card,.little_card{
     position: absolute;
     transition: transform 800ms cubic-bezier(.05,.43,.25,.95);
@@ -247,6 +263,7 @@ img{
     display: flex;
     justify-content: space-evenly;
     padding: 0vmin 4vmin;
+    align-self: flex-end;
 }
 
 .card_change button{
